--- a/index.html
+++ b/index.html
@@ -2,15 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>
+          <a href=""><i class="fa-solid fa-house fa-lg"></i></a>
+          <div class="index progress"></div>
+        </li>
+        <li>
+          <a href=""><i class="fa-solid fa-phone fa-lg"></i></a>
+          <div class="progress"></div>
+        </li>
+        <li>
+          <a href=""><i class="fa-solid fa-laptop-file fa-lg"></i></a>
+          <div class="progress"></div>
+        </li>
+        <li>
+          <a href=""><i class="fa-solid fa-user fa-lg"></i></a>
+          <div class="progress"></div>
+        </li>
+      </ul>
+    </nav>
+    <header id="head">
+      <h1 class="welcome-message">Merhaba Ben Melih.</h1>
+      <a href="#wai">Scroll Down</a>
+    </header>
+    <section id="wai" class="who-am-i"></section>
 
-                <header>
-                                <h1>Merhaba, Ben Melih.</h1>
-                </header>
-
+    <!--! Font Awesome  -->
+    <script
+      src="https://kit.fontawesome.com/b65786cee8.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
