--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
           <div class="index progress"></div>
         </li>
         <li>
-          <a href=""><i class="fa-solid fa-phone fa-lg"></i></a>
+          <a href=""><i class="fa-solid fa-user fa-lg"></i></a>
           <div class="progress"></div>
         </li>
         <li>
@@ -22,16 +22,34 @@
           <div class="progress"></div>
         </li>
         <li>
-          <a href=""><i class="fa-solid fa-user fa-lg"></i></a>
+          <a href=""><i class="fa-solid fa-phone fa-lg"></i></a>
           <div class="progress"></div>
         </li>
       </ul>
     </nav>
     <header id="head">
-      <h1 class="welcome-message">Merhaba Ben Melih.</h1>
-      <a href="#wai">Scroll Down</a>
+      <h1 class="welcome-message">Merhaba</h1>
+      <a class="scroll-down" href="#wai">Scroll Down &nbsp <i class="fa-solid fa-chevron-down fa-lg"></i></a>
     </header>
-    <section id="wai" class="who-am-i"></section>
+    <section id="wai" class="who-am-i">
+      <h1 class="isim wai-header">Adım Melih.</h1>
+      <p class="wai-p">
+        Yaklaşık 2 yıldır çeşitli alanlarda yazılım ve programlama üzerinde
+        çalışıyor, projeler geliştiriyorum.
+      </p>
+    </section>
+
+    <footer>
+      &copy 2023 Aurotem.
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/melikcan-fidan/"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+        </li>
+        <li>
+          <a href="https://github.com/Aurotem"><i class="fa-brands fa-github fa-lg"></i></a>
+        </li>
+      </ul>
+    </footer>
 
     <!--! Font Awesome  -->
     <script
