About-me page added

--- a/contact.html
+++ b/contact.html
@@ -11,25 +11,29 @@
       <ul>
         <li>
           <a href="./index.html"><i class="fa-solid fa-house fa-lg"></i></a>
-          <div class="index progress"></div>
+          <div class="progress"></div>
         </li>
         <li>
           <a href="./about-me.html"><i class="fa-solid fa-user fa-lg"></i></a>
           <div class="progress"></div>
         </li>
         <li>
-          <a href="./projects.html"><i class="fa-solid fa-laptop-file fa-lg"></i></a>
+          <a href="./projects.html"
+            ><i class="fa-solid fa-laptop-file fa-lg"></i
+          ></a>
           <div class="progress"></div>
         </li>
         <li>
           <a href="./contact.html"><i class="fa-solid fa-phone fa-lg"></i></a>
-          <div class="progress"></div>
+          <div class="index progress"></div>
         </li>
       </ul>
     </nav>
-    <header class="welcome" id="head">
+    <header id="head">
       <h1 class="welcome-message">Merhaba</h1>
-      <a class="scroll-down" href="#wai">Scroll Down &nbsp <i class="fa-solid fa-chevron-down fa-lg"></i></a>
+      <a class="scroll-down" href="#wai"
+        >Scroll Down &nbsp <i class="fa-solid fa-chevron-down fa-lg"></i
+      ></a>
     </header>
     <section id="wai" class="who-am-i">
       <h1 class="isim wai-header">Adım Melih.</h1>
@@ -43,10 +47,14 @@
       &copy 2023 Aurotem.
       <ul>
         <li>
-          <a href="https://www.linkedin.com/in/melikcan-fidan/"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+          <a href="https://www.linkedin.com/in/melikcan-fidan/"
+            ><i class="fa-brands fa-linkedin fa-lg"></i
+          ></a>
         </li>
         <li>
-          <a href="https://github.com/Aurotem"><i class="fa-brands fa-github fa-lg"></i></a>
+          <a href="https://github.com/Aurotem"
+            ><i class="fa-brands fa-github fa-lg"></i
+          ></a>
         </li>
       </ul>
     </footer>
