--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <ul>
         <li>
-          <a href="./index.html"><i class="fa-solid fa-house fa-lg"></i></a>
+          <a href="#head"><i class="fa-solid fa-house fa-lg"></i></a>
           <div class="index progress"></div>
         </li>
         <li>
