--- a/about-me.html
+++ b/about-me.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
     <nav>
       <ul>
         <li>
@@ -68,5 +71,7 @@
       src="https://kit.fontawesome.com/b65786cee8.js"
       crossorigin="anonymous"
     ></script>
+    <!--! My Script -->
+    <script src="./index.js"></script>
   </body>
 </html>
