--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
     <nav>
       <ul>
         <li>
@@ -29,18 +32,8 @@
         </li>
       </ul>
     </nav>
-    <header id="head">
-      <h1 class="welcome-message">Merhaba</h1>
-      <a class="scroll-down" href="#wai"
-        >Scroll Down &nbsp <i class="fa-solid fa-chevron-down fa-lg"></i
-      ></a>
-    </header>
-    <section id="wai" class="who-am-i">
-      <h1 class="isim wai-header">Adım Melih.</h1>
-      <p class="wai-p">
-        Yaklaşık 2 yıldır çeşitli alanlarda yazılım ve programlama üzerinde
-        çalışıyor, projeler geliştiriyorum.
-      </p>
+    <section id="Projects">
+      
     </section>
 
     <footer>
@@ -64,5 +57,8 @@
       src="https://kit.fontawesome.com/b65786cee8.js"
       crossorigin="anonymous"
     ></script>
+
+    <!--! My Script -->
+    <script src="./index.js"></script>
   </body>
 </html>
