--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
     <nav>
       <ul>
         <li>
@@ -18,7 +21,9 @@
           <div class="progress"></div>
         </li>
         <li>
-          <a href="./projects.html"><i class="fa-solid fa-laptop-file fa-lg"></i></a>
+          <a href="./projects.html"
+            ><i class="fa-solid fa-laptop-file fa-lg"></i
+          ></a>
           <div class="progress"></div>
         </li>
         <li>
@@ -29,24 +34,42 @@
     </nav>
     <header class="welcome" id="head">
       <h1 class="welcome-message">Merhaba</h1>
-      <a class="scroll-down" href="#wai">Scroll Down &nbsp <i class="fa-solid fa-chevron-down fa-lg"></i></a>
+      <a
+        onclick="addDisplayNone(scrollDown, scrollUp)"
+        id="scroll-down"
+        class="scroll down"
+        href="#wai"
+        >Scroll Down &nbsp <i class="fa-solid fa-chevron-down fa-lg"></i
+      ></a>
+      <a
+        onclick="addDisplayNone(scrollUp, scrollDown)"
+        id="scroll-up"
+        class="scroll up display-none"
+        href="#head"
+        >Go Up &nbsp <i class="fa-solid fa-chevron-up fa-lg"></i
+      ></a>
     </header>
     <section id="wai" class="who-am-i">
-      <h1 class="isim wai-header">Adım Melih.</h1>
+      <h1 class="isim wai-header">Alayınızın AQ.</h1>
       <p class="wai-p">
         Yaklaşık 2 yıldır çeşitli alanlarda yazılım ve programlama üzerinde
         çalışıyor, projeler geliştiriyorum.
       </p>
     </section>
 
+    <!--* Footer -->
     <footer>
       &copy 2023 Aurotem.
       <ul>
         <li>
-          <a href="https://www.linkedin.com/in/melikcan-fidan/"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+          <a href="https://www.linkedin.com/in/melikcan-fidan/"
+            ><i class="fa-brands fa-linkedin fa-lg"></i
+          ></a>
         </li>
         <li>
-          <a href="https://github.com/Aurotem"><i class="fa-brands fa-github fa-lg"></i></a>
+          <a href="https://github.com/Aurotem"
+            ><i class="fa-brands fa-github fa-lg"></i
+          ></a>
         </li>
       </ul>
     </footer>
@@ -56,5 +79,7 @@
       src="https://kit.fontawesome.com/b65786cee8.js"
       crossorigin="anonymous"
     ></script>
+    <!--! Script -->
+    <script src="./index.js"></script>
   </body>
 </html>
