--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,122 @@
         </li>
       </ul>
     </nav>
-    <section id="Projects">
-      
+    <section id="projects-select">
+      <ul class="select-nav">
+        <li>
+          <a href="#react"
+            ><i class="fa-brands fa-react fa-2xl" style="color: #ffffff"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#unity"
+            ><i class="fa-brands fa-unity fa-2xl" style="color: #ffffff"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#web"
+            ><i class="fa-brands fa-js fa-2xl" style="color: #ffffff"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#python"
+            ><i class="fa-brands fa-python fa-2xl" style="color: #ffffff"></i
+          ></a>
+        </li>
+      </ul>
+    </section>
+    <section id="web">
+      <section id="projects">
+        <div class="project">
+          <img src="./images/box-shadow.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Css Shadow Generator</h1>
+            <i class="project-description"
+              >A tool to make css box-shadows for your project. You can adjust
+              the properties, then click 'Show Code' to get the generated
+              code.</i
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img src="./images/simon-game.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Simon Game</h1>
+            <i class="project-description"
+              >Classic simon game made with HTML, CSS, and Javascript.</i
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img src="./images/news.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">News Page</h1>
+            <i class="project-description"
+              >A Challenge by Front-end mentor.</i
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img src="./images/card-info.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Credit Card Info</h1>
+            <i class="project-description"
+              >A Credit Card info page challenge by Front-end mentor. I did it with vanilla Javascript, HTML, and CSS.</i
+            >
+          </div>
+        </div>
+      </section>
+      <section id="react">
+        <div class="project">
+          <img src="./images/tic-tac-toe.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Tic Tac Toe</h1>
+            <i class="project-description"
+              >Classic Tic Tac Toe game made with ReactJS.</i
+            >
+          </div>
+        </div>
+      </section>
+      <section id="python">
+        <div class="project">
+          <img src="./images/pong-game.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Pong Game</h1>
+            <i class="project-description"
+              >The Pong Game I made with Python.</i
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img src="./images/password-manager.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Password Manager</h1>
+            <i class="project-description"
+              >A password-manager app made with python. You can store your user info, and then search for it. If you struggling with finding a password, you can generate it in this app too.</i
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img src="./images/turtle-crossing.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Turtle Cross Game</h1>
+            <i class="project-description"
+              >A basic turtle cross game made with python. The rectangles are cars and you have to avoid running to them.</i
+            >
+          </div>
+        </div>
+      </section>
+      <section id="unity">
+        <div class="project">
+          <img src="./images/metroidvania.png" alt="Project image" />
+          <div class="project-info">
+            <h1 class="project-header">Metroidvania Game</h1>
+            <i class="project-description"
+              >A metroidvania game I made with unity. It has skills, minimap, map, pause menu, settings(so you can turn down the volume), checkpoints to save your game data, and basic enemy ai.</i
+            >
+          </div>
+        </div>
+      </section>
     </section>
 
     <footer>
