--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       ></a>
     </header>
     <section id="wai" class="who-am-i">
-      <h1 class="isim wai-header">Alayınızın AQ.</h1>
+      <h1 class="isim wai-header">Adım Melih.</h1>
       <p class="wai-p">
         Yaklaşık 2 yıldır çeşitli alanlarda yazılım ve programlama üzerinde
         çalışıyor, projeler geliştiriyorum.
