--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/stars.css" />
   </head>
   <body>
     <nav>
@@ -29,19 +30,10 @@
         </li>
       </ul>
     </nav>
-    <header id="head">
-      <h1 class="welcome-message">Merhaba</h1>
-      <a class="scroll-down" href="#wai"
-        >Scroll Down &nbsp <i class="fa-solid fa-chevron-down fa-lg"></i
-      ></a>
-    </header>
-    <section id="wai" class="who-am-i">
-      <h1 class="isim wai-header">Adım Melih.</h1>
-      <p class="wai-p">
-        Yaklaşık 2 yıldır çeşitli alanlarda yazılım ve programlama üzerinde
-        çalışıyor, projeler geliştiriyorum.
-      </p>
+    <section id="contact">
+      
     </section>
+
 
     <footer>
       &copy 2023 Aurotem.
