--- a/about-me.html
+++ b/about-me.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/stars.css" />
   </head>
   <body>
     <div id="stars"></div>
@@ -72,6 +73,6 @@
       crossorigin="anonymous"
     ></script>
     <!--! My Script -->
-    <script src="./index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
