Updating Contact Page

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,10 @@
       </ul>
     </nav>
     <section id="contact">
-      
+      <div class="contact-card">
+        <h1>Bana Ulaşın.</h1>
+        .
+      </div>
     </section>
 
 
