--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles/stars.css" />
   </head>
   <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
     <nav>
       <ul>
         <li>
@@ -30,34 +33,43 @@
         </li>
       </ul>
     </nav>
-    <section id="contact">
+    <section class="flex j-center a-center" id="contact">
       <div class="contact-card">
-        <h1>Bana Ulaşın.</h1>
-        .
+        <header class="contact-header">Bana Ulaşın.</header>
+        <div class="contact-interior">
+          <a href="mailto:mefidev@gmail.com">E-posta gönderin.</a>
+        </div>
+        <div class="hr"></div>
+        <ul class="contact-list flex j-center">
+          <li>
+            <a href="https://www.linkedin.com/in/melikcan-fidan/"
+              ><i class="fa-brands fa-linkedin fa-2xl"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/Aurotem"
+              ><i class="fa-brands fa-github fa-2xl"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/Aurotem"
+              ><i class="fa-brands fa-instagram fa-2xl"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/Aurotem"
+              ><i class="fa-brands fa-twitter fa-2xl"></i
+            ></a>
+          </li>
+        </ul>
       </div>
     </section>
-
-
-    <footer>
-      &copy 2023 Aurotem.
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/melikcan-fidan/"
-            ><i class="fa-brands fa-linkedin fa-lg"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://github.com/Aurotem"
-            ><i class="fa-brands fa-github fa-lg"></i
-          ></a>
-        </li>
-      </ul>
-    </footer>
 
     <!--! Font Awesome  -->
     <script
       src="https://kit.fontawesome.com/b65786cee8.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
