--- a/about-me.html
+++ b/about-me.html
@@ -33,8 +33,8 @@
         </li>
       </ul>
     </nav>
-    <section class="welcome about-me">
-      <div class="container">
+    <section class="welcome about-me flex j-center a-center">
+      <div class="container flex column a-center">
         <h1 class="about-me-message">Hakkımda</h1>
         <p class="about-me-paragraph">
           Manisa Celal Bayar Üniversitesi İngiliz Dili ve Edebiyatı
@@ -50,22 +50,6 @@
         </p>
       </div>
     </section>
-
-    <footer>
-      &copy 2023 Aurotem.
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/melikcan-fidan/"
-            ><i class="fa-brands fa-linkedin fa-lg"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://github.com/Aurotem"
-            ><i class="fa-brands fa-github fa-lg"></i
-          ></a>
-        </li>
-      </ul>
-    </footer>
 
     <!--! Font Awesome  -->
     <script
