--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </li>
       </ul>
     </nav>
-    <header class="welcome" id="head">
+    <header class="welcome flex j-center a-center" id="head">
       <h1 class="welcome-message">Merhaba</h1>
       <a
         onclick="addDisplayNone(scrollDown, scrollUp)"
@@ -50,30 +50,13 @@
         >Go Up &nbsp <i class="fa-solid fa-chevron-up fa-lg"></i
       ></a>
     </header>
-    <section id="wai" class="who-am-i">
+    <section id="wai" class="who-am-i flex j-center a-center column">
       <h1 class="isim wai-header">Adım Melih.</h1>
       <p class="wai-p">
         Yaklaşık 2 yıldır çeşitli alanlarda yazılım ve programlama üzerinde
         çalışıyor, projeler geliştiriyorum.
       </p>
     </section>
-
-    <!--* Footer -->
-    <footer>
-      &copy 2023 Aurotem.
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/melikcan-fidan/"
-            ><i class="fa-brands fa-linkedin fa-lg"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://github.com/Aurotem"
-            ><i class="fa-brands fa-github fa-lg"></i
-          ></a>
-        </li>
-      </ul>
-    </footer>
 
     <!--! Font Awesome  -->
     <script
