--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,8 @@
         </li>
       </ul>
     </nav>
-    <section id="projects-select">
-      <ul class="select-nav">
+    <section id="projects-select" class="flex a-center j-center">
+      <ul class="select-nav flex">
         <li>
           <a href="#web"
             ><i class="fa-brands fa-js fa-2xl" style="color: #ffffff"></i
@@ -60,9 +60,9 @@
     </section>
     <section class="flex g-100vh column" id="projects">
       <section class="flex a-center j-center g-100vh" id="web">
-        <div class="project">
+        <div class="project flex a-center">
           <img src="./images/box-shadow.png" alt="Project image" />
-          <div class="project-info">
+          <div class="project-info t-center">
             <h1 class="project-header">Css Shadow Generator</h1>
             <i class="project-description"
               >A tool to make css box-shadows for your project. You can adjust
@@ -73,9 +73,9 @@
         </div>
       </section>
       <section class="flex a-center j-center g-100vh" id="react">
-        <div class="project">
+        <div class="project flex a-center">
           <img src="./images/tic-tac-toe.png" alt="Project image" />
-          <div class="project-info">
+          <div class="project-info t-center">
             <h1 class="project-header">Tic Tac Toe</h1>
             <i class="project-description"
               >Classic Tic Tac Toe game made with ReactJS.</i
@@ -84,9 +84,9 @@
         </div>
       </section>
       <section class="flex a-center j-center g-100vh" id="python">
-        <div class="project">
+        <div class="project flex a-center">
           <img src="./images/password-manager.png" alt="Project image" />
-          <div class="project-info">
+          <div class="project-info t-center">
             <h1 class="project-header">Password Manager</h1>
             <i class="project-description"
               >A password-manager app made with python. You can store your user
@@ -97,9 +97,9 @@
         </div>
       </section>
       <section class="flex a-center j-center g-100vh" id="unity">
-        <div class="project">
+        <div class="project flex a-center">
           <img src="./images/metroidvania.png" alt="Project image" />
-          <div class="project-info">
+          <div class="project-info t-center">
             <h1 class="project-header">Metroidvania Game</h1>
             <i class="project-description"
               >A metroidvania game I made with unity. It has skills, minimap,
@@ -110,22 +110,6 @@
         </div>
       </section>
     </section>
-
-    <footer>
-      &copy 2023 Aurotem.
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/melikcan-fidan/"
-            ><i class="fa-brands fa-linkedin fa-lg"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://github.com/Aurotem"
-            ><i class="fa-brands fa-github fa-lg"></i
-          ></a>
-        </li>
-      </ul>
-    </footer>
 
     <!--! Font Awesome  -->
     <script
