--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         </li>
       </ul>
     </nav>
-    <section class="flex j-center a-center" id="contact">
+    <section class="flex j-center a-center t-center" id="contact">
       <div class="contact-card">
         <header class="contact-header">Bana Ulaşın.</header>
         <div class="contact-interior">
