--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/stars.css" />
+    <link rel="stylesheet" href="./styles/mediaQueries.css">
   </head>
   <body>
     <div class="go-up"><a href="#"><i class="fa-solid fa-chevron-up fa-2xl"></i></a></div>
