--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/stars.css" />
+    <link rel="stylesheet" href="./styles/mediaQueries.css">
   </head>
   <body>
     <div id="stars"></div>
